finis desain awal

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio-tailwind-css",
+  "name": "portfolio-me",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
